@@ -2,12 +2,12 @@ package com.enonic.xp.repo.impl.elasticsearch.query.translator.factory.function;
 
 import java.util.List;
 
-import org.apache.commons.lang.StringUtils;
-
 import com.enonic.xp.query.expr.ValueExpr;
 import com.enonic.xp.repo.impl.elasticsearch.query.translator.resolver.SearchQueryFieldNameResolver;
 import com.enonic.xp.repo.impl.index.IndexValueType;
 import com.enonic.xp.repo.impl.node.NodeConstants;
+
+import static com.google.common.base.Strings.nullToEmpty;
 
 public class NGramFunctionArguments
     extends AbstractSimpleQueryStringFunctionArguments
@@ -16,7 +16,7 @@ public class NGramFunctionArguments
     @Override
     protected String resolveAnalyzer( final String value )
     {
-        return StringUtils.isBlank( value ) ? NodeConstants.DEFAULT_NGRAM_SEARCH_ANALYZER : value;
+        return nullToEmpty( value ).isBlank() ? NodeConstants.DEFAULT_NGRAM_SEARCH_ANALYZER : value;
     }
 
     @Override
